Exercises 1 and 2 completed

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <script defer type="module"  src="data.js"></script>
+    <script defer type="module"  src="films.js"></script>
+ 
+    
 
 <body>
 
