--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <script defer type="module"  src="data.js"></script>
-    <script defer type="module"  src="films.js"></script>
  
-    
-
 <body>
 
     <h1>Sprint 4 IT ACADEMY</h1>
-    
+    <script type="module"  src="films.js"></script> 
 </body>
 
 </html>
